--- a/citations.html
+++ b/citations.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title class="page_title">Olderbrother | Journal</title>
+    <title class="page_title">Olderbrother | Citations</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
     <link rel="stylesheet" type="text/css" href="css/grids.css">
@@ -17,7 +17,7 @@
 
     <header class="content_container" id="citations_title">
       <h1>Olderbrother Citations</h1>
-      <p>This is citations for OlderBrother</p>
+      <p>These are the citations for the OlderBrother company website.</p>
 
       <nav class="main_nav">
         <a href="style_guide.html" class="main_nav_item">Style Guide</a>
@@ -70,112 +70,6 @@
       </section>
     </div>
 
-    <div id="global_nav">
-
-      <!-- Desktop Navigation -->
-      <div class="desktop_nav">
-        <nav class="main_nav">
-          <a href="home.html" id="logo-wordmark" class="main_nav_item">
-            <img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo">
-          </a>
-          <a href="shop.html" class="main_nav_item">Shop</a>
-          <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-          <a href="about.html" class="main_nav_item">About</a>
-          <a href="journal.html" class="main_nav_item">Journal</a>
-        </nav>
-      </div>
-
-      <!-- Mobile Navigation -->
-      <div class="mobile_nav">
-        <nav class="main_nav">
-          <a href="home.html" id="logo-icon" class="main_nav_item">
-            <img src="img/olderbrother-icon.png" alt="Olderbrother Logo Icon">
-          </a>
-          <a href="shop.html" class="main_nav_item">Shop</a>
-          <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-          <a href="about.html" class="main_nav_item">About</a>
-          <a href="journal.html" class="main_nav_item">Journal</a>
-        </nav>
-      </div>
-
-    </div>
-
-    <!-- This is footer -->
-
-    <footer class="page_footer">
-
-        <div id="main_footer" class="content_container">
-
-          <div id="footer-newsletter">
-            <div class="block">
-              <h4 class="footer-title">Subscribe to our Newsletter</h4>
-              <p class="newsletter-desc">Universal garments equally tailored to fit men, women and people. Sign up to receive updates on new launches and news.</p>
-
-              <div class="footer-items-form">
-                <input type="text" id="subscribe-news-input" class="input-box" placeholder="Email Address">
-                <a href="#" id="subscribe-news-btn" class="primary-btn">Submit</a>
-              </div>
-            </div>
-          </div>
-
-          <div id="footer-nav">
-            <div class="block">
-              <h4 class="footer-title">Company</h4>
-              <div class="footer-links">
-                <a href="about.html">About Us</a><br>
-                <a href="#">Careers</a><br>
-                <a href="#">Press</a><br>
-                <a href="#">Stockists</a>
-              </div>
-            </div>
-
-            <div class="block">
-              <h4 class="footer-title">Contact</h4>
-              <div class="footer-links">
-                <a href="mailto:howdy@olderbrother.us">Email Us</a><br>
-                <a href="#">Visit the Store</a><br>
-                <a href="#">Help & FAQ</a><br>
-                <a href="#">Shipping</a>
-              </div>
-            </div>
-
-            <div class="block">
-              <div class="footer-social-media content_icon">
-                <h4 class="footer-title">Stay Connected</h4>
-                <ul class="icon_lists">
-                  <li class="icon">
-                    <span class="iconfont"><a href="https://twitter.com/olderbrotherus" target="_blank" title="Twitter">&#xe84c;</a></span>
-                  </li>
-                  <li class="icon">
-                    <span class="iconfont"><a href="https://www.instagram.com/olderbrother" target="_blank" title="Instagram">&#xe6fc;</a></span>
-                  </li>
-                  <li class="icon">
-                    <span class="iconfont"><a href="https://www.pinterest.ca/olderbrotherpin/" target="_blank" title="Pinterest">&#xe7a8;</a></span>
-                  </li>
-                  <li class="icon">
-                    <span class="iconfont"><a href="https://www.facebook.com/OlderBrother.us/" target="_blank" title="Facebook">&#xe64e;</a></span>
-                  </li>
-                </ul>
-              </div>
-            </div>
-
-        </div>
-      </div>
-
-      <div class="footer_copyright">
-        <div class="content_container">
-          <div class="copyright-text">
-            <a href="#">Copyright © IAT 339 Team 16</a>
-          </div>
-          <div class="copyright-links">
-            <a href="style_guide.html" target="_blank">Style Guide</a>
-            <a href="https://github.com/joyceca9/P02-Company" target="_blank">Github</a>
-            <a href="citations.html" target="_blank">Citations</a>
-          </div>
-        </div>
-      </div>
-
-    </footer>
   	<script src="scripts/main.js"></script>
   </body>
 </html>
