--- a/product_detail2.html
+++ b/product_detail2.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title class="page_title">Olderbrother | Product Name</title>
+    <title class="page_title">Olderbrother | Classic Shirt</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
     <link rel="stylesheet" type="text/css" href="css/grids.css">
