--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title class="page_title">Olderbrother | Products</title>
+    <title class="page_title">Olderbrother | About</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
     <link rel="stylesheet" type="text/css" href="css/grids.css">
