--- a/journal.html
+++ b/journal.html
@@ -84,7 +84,7 @@
             <div class="box">
               <div class="box-image">
                 <div class="image-link-container">
-                  <a href="journal_detail.html"><img src="img/Journal-img-01.jpg" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
+                  <a href="journal_detail.html"><img src="img/Journal-img-01.jpg" class="img-link" alt="Presenting Spring/Summer 2019"></a>
                   <div class="img-hover-box">
                     <div class="img-hover-text">
                       <a href="journal_detail.html">Presenting Spring/Summer 2019</a>
@@ -135,10 +135,10 @@
               <div class="box">
                 <div class="box-image">
                   <div class="image-link-container">
-                    <a href="journal_detail.html"><img src="img/Journal-img-04.jpg" class="img-link" alt="Connecting the Dots"></a>
+                    <a href="journal_detail.html"><img src="img/Journal-img-04.jpg" class="img-link" alt="An Olderbrother Picnic"></a>
                     <div class="img-hover-box">
                       <div class="img-hover-text">
-                        <a href="journal_detail.html">Connecting the Dots</a>
+                        <a href="journal_detail.html">An Olderbrother Picnic</a>
                       </div>
                     </div>
                   </div>
@@ -168,13 +168,13 @@
                 <div class="box-image">
                   <div class="image-link-container">
                     <a href="journal_detail.html">
-                      <video muted autoplay loop controls width="100%" class="img-link" alt="Connecting the Dots">
+                      <video muted autoplay loop controls width="100%" class="img-link" alt="Behind the Scenes: Aw18">
                         <source src="img/olderbrother.mp4" type="video/mp4">
                       </video>
                     </a>
                     <div class="img-hover-box">
                       <div class="img-hover-text">
-                        <a href="journal_detail.html">Connecting the Dots</a>
+                        <a href="journal_detail.html">Behind the Scenes: Aw18</a>
                       </div>
                     </div>
                   </div>
