--- a/lookbooks.html
+++ b/lookbooks.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title class="page_title">Olderbrother | Lookbook</title>
+    <title class="page_title">Olderbrother | Lookbooks</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
     <link rel="stylesheet" type="text/css" href="css/grids.css">
