--- a/payment-form.html
+++ b/payment-form.html
@@ -22,146 +22,182 @@
         <a href="product-page.html" class="main_nav_item">Products</a>
         <a href="checkout-cart.html" class="main_nav_item">Checkout</a>
         <a href="payment-form.html" class="main_nav_item"><span class="current_link">Payment</span></a>
+        <a href="citations.html" class="main_nav_item">Citations</a>
       </nav>
 
     </header>
 
     <div class="content_container">
-      <h2 class="main_heading">Payment</h2>
-
-      <h3 class="sub_heading">Payment Information</h3>
+      <h2 class="main_heading">Payment Information</h2>
 
       <section id="payment_order_form">
 
-          <div class="container">
+        <div id="order_summary">
+          <div class="block">
+            <h4 id="order-summary-title">Order Summary</h4>
 
-            <div class="block">
-              <div class="order_summary">
-                <h4 id="order-summary-title">Order Summary</h4>
-
-                <div class="order-line">
-                  <p class="summary-left">Items (3)</p>
-                  <p class="summary-right">$645.00</p>
-                </div>
-
-                <div class="order-line">
-                  <p class="summary-left">Shipping</p>
-                  <p class="summary-right">FREE</p>
-                </div>
-
-                <div class="order-line">
-                  <p class="summary-left">Taxes</p>
-                  <p class="summary-right">$77.40</p>
-                </div>
-
-                <div class="order-line order-total">
-                  <h4 id="order-total-title">Order Total</h4>
-                  <h4 id="order-total-price">$722.40</h4>
-                </div>
-
-                <div class="shipping-address">
-                  <div class="order-line">
-                    <h4 class="summary-left">Shipping Address</h4>
-                    <p class="summary-right"><a href="#" class="edit-link">Edit</a></p>
-                  </div>
-                  <p class="order-text">
-                    Jenna Appleseed<br>
-                    2455 W 5th Ave<br>
-                    Vancouver, BC V6K 1S7<br>
-                    Canada, 6041234567
-                  </p>
-                </div>
-
-                <div class="shipping-method">
-                  <div class="order-line">
-                    <h4 class="summary-left">Shipping Method</h4>
-                    <p class="summary-right"><a href="#" class="edit-link">Edit</a></p>
-                  </div>
-                  <p class="order-text">
-                    Standard Free Shipping<br>
-                    Delivers in 7-10 Business Days
-                  </p>
-                </div>
-
-              </div>
+            <div class="order-line">
+              <p class="summary-left">Items (3)</p>
+              <p class="summary-right">$645.00</p>
             </div>
 
-            <div class="block">
-              <div class="payment_form">
-
-                <h4 id="card-info-title">Payment Method</h4>
-                <div class="pay_method">
-                  <div class="method1">
-                    <input type="radio" value="radio_btn" name="method">
-                    <label for="radio_btn_name">Credit Card</label>
-                  </div><br>
-                  <div class="method2">
-                    <input type="radio" value="radio_btn" name="method">
-                    <label for="radio_btn_name">Paypal</label>
-                  </div>
-                </div><br>
-
-                <h4 id="card-info-title">Card Information</h4>
-                <div class="cardholder_name">
-                  <label for="card_name" class="text-label">Name on Card</label>
-                  <input type="text" id="card_name" class="input-box">
-                </div><br>
-
-                <div class="card_number">
-                  <label for="card_num" class="text-label">Card Number</label>
-                  <input type="text" id="card_num" class="input-box">
-                </div><br>
-
-                <div class="card_cvc">
-                  <label for="card_cvc" class="text-label">Card CVC</label>
-                  <input type="text" id="card_cvc" class="input-box">
-                </div><br>
-
-                <div class="card_expiry">
-                  <label class="text-label">Expiry Date</label><br>
-
-                  <div class="form_select">
-                    <select name="month" id="expiry_month"><br>
-                      <option value="jan">January</option>
-                      <option value="feb">February</option>
-                      <option value="mar">March</option>
-                      <option value="apr">April</option>
-                      <option value="may">May</option>
-                      <option value="jun">June</option>
-                      <option value="jul">July</option>
-                      <option value="aug">August</option>
-                      <option value="sep">September</option>
-                      <option value="oct">October</option>
-                      <option value="nov">November</option>
-                      <option value="dec">December</option>
-                    </select>
-                  </div>
-
-                  <div class="form_select">
-                    <select name="year" id="expiry_year">
-                      <option value="2019">2019</option>
-                      <option value="2020">2020</option>
-                      <option value="2021">2021</option>
-                      <option value="2022">2022</option>
-                      <option value="2023">2023</option>
-                    </select>
-                  </div>
-
-                </div><br>
-
-                <div class="save_card">
-                  <input type="radio" value="radio_btn">
-                  <label for="radio_btn_name">Save card on file?</label>
-                </div><br>
-
-                <div class="pay_form_btns">
-                  <a href="#" class="secondary-btn">Cancel</a>
-                  <a href="#" class="primary-btn">Checkout</a>
-                </div>
+            <div class="order-line">
+              <p class="summary-left">Shipping</p>
+              <p class="summary-right">FREE</p>
             </div>
+
+            <div class="order-line">
+              <p class="summary-left">Taxes</p>
+              <p class="summary-right">$77.40</p>
+            </div>
+
+            <div class="order-line order-total seperator-line">
+              <h4 id="order-total-title">Order Total</h4>
+              <h4 id="order-total-price">$722.40</h4>
+            </div>
+
           </div>
+        </div>
+
+        <div id="payment_form">
+          <div class="block">
+
+            <h4 id="card-info-title">Shipping Address</h4>
+            <div class="shipping_input">
+
+              <div class="shipping_name">
+                <label for="ship_name" class="text-label">Full Name</label>
+                <input type="text" id="ship_name" class="input-box">
+              </div><br>
+
+              <div class="shipping_address">
+                <label for="ship_street" class="text-label">Street Address</label>
+                <input type="text" id="ship_street" class="input-box">
+              </div><br>
+
+              <div class="shipping_apt">
+                <label for="ship_apt" class="text-label">Apt/Suite (Optional)</label>
+                <input type="text" id="ship_apt" class="input-box">
+              </div><br>
+
+              <div class="shipping_city_prov">
+                <div class="shipping_city">
+                  <label for="ship_city" class="text-label">City</label>
+                  <input type="text" id="ship_city" class="input-box">
+                </div><br>
+
+                <div class="shipping_province">
+                  <label for="province_option" class="text-label">Province</label><br>
+
+                  <div class="form_select">
+                    <select name="province" id="province_option"><br>
+                      <option value="1">British Columbia</option>
+                      <option value="2">Alberta</option>
+                      <option value="3">Saskatchewan</option>
+                      <option value="4">Manitoba</option>
+                      <option value="5">Ontario</option>
+                      <option value="6">Quebec</option>
+                      <option value="7">Newfoundland & Labrador</option>
+                      <option value="8">New Brunswick</option>
+                      <option value="9">Prince Edward Island</option>
+                      <option value="10">Nova Scotia</option>
+                    </select>
+                  </div>
+                </div>
+              </div><br>
+
+              <div class="shipping_postal">
+                <label for="ship_postal" class="text-label">Postal Code</label>
+                <input type="text" id="ship_postal" class="input-box">
+              </div><br>
+
+              <div class="shipping_country">
+                <label for="ship_country" class="text-label">Country</label>
+                <input type="text" id="ship_country" class="input-box" placeholder="Canada">
+              </div><br>
+
+              <div class="shipping_phone">
+                <label for="ship_phone" class="text-label">Phone Number</label>
+                <input type="text" id="ship_phone" class="input-box">
+              </div><br>
+
+            </div>
+
+            <div class="seperator-line">
+              <h4 id="card-info-title">Payment Method</h4>
+            </div>
+
+            <div class="pay_method">
+              <div class="method1">
+                <input type="radio" value="radio_btn" name="method">
+                <label for="radio_btn_name">Credit Card</label>
+              </div><br>
+              <div class="method2">
+                <input type="radio" value="radio_btn" name="method">
+                <label for="radio_btn_name">Paypal</label>
+              </div>
+            </div><br>
+
+            <h4 id="card-info-title">Card Information</h4>
+            <div class="cardholder_name">
+              <label for="card_name" class="text-label">Name on Card</label>
+              <input type="text" id="card_name" class="input-box">
+            </div><br>
+
+            <div class="card_number">
+              <label for="card_num" class="text-label">Card Number</label>
+              <input type="text" id="card_num" class="input-box">
+            </div><br>
+
+            <div class="card_cvc">
+              <label for="card_cvc" class="text-label">Card CVC</label>
+              <input type="text" id="card_cvc" class="input-box">
+            </div><br>
+
+            <div class="card_expiry">
+              <label for="expiry_month" class="text-label">Expiry Date</label><br>
+
+              <div class="form_select">
+                <select name="month" id="expiry_month"><br>
+                  <option value="jan">January</option>
+                  <option value="feb">February</option>
+                  <option value="mar">March</option>
+                  <option value="apr">April</option>
+                  <option value="may">May</option>
+                  <option value="jun">June</option>
+                  <option value="jul">July</option>
+                  <option value="aug">August</option>
+                  <option value="sep">September</option>
+                  <option value="oct">October</option>
+                  <option value="nov">November</option>
+                  <option value="dec">December</option>
+                </select>
+              </div>
+
+              <div class="form_select">
+                <select name="year" id="expiry_year">
+                  <option value="2019">2019</option>
+                  <option value="2020">2020</option>
+                  <option value="2021">2021</option>
+                  <option value="2022">2022</option>
+                  <option value="2023">2023</option>
+                </select>
+              </div>
+
+            </div><br>
+
+            <div class="save_card">
+              <input type="radio" value="radio_btn">
+              <label for="radio_btn_name">Save card on file</label>
+            </div><br>
+
+            <div class="pay_form_btns">
+              <a href="checkout_cart.html" class="secondary-btn">Go Back</a>
+              <a href="home.html" class="primary-btn">Checkout</a>
+            </div>
 
         </div>
+      </div>
 
       </section>
 
