Fix font size and image

--- a/journal_detail.html
+++ b/journal_detail.html
@@ -74,10 +74,10 @@
         <h1>Olderbrother Featured in Bon Appétit</h1>
         <h5>These Designers Just Want You to Get Amped About Their Chaga-Dyed Clothes</h5>
         <div class="article-image">
-          <img src="img/01.jpg" alt="">
+          <img src="img/saffron-dye.jpg" alt="">
           <img src="img/imagery01.jpg" alt="">
-          <img src="img/05.jpg" alt="">
-          <img src="img/04.jpg" alt="">
+          <img src="img/journal/journal-article01.png" alt="">
+          <img src="img/journal/journal-article04.png" alt="">
         </div>
 
       </div>
