--- a/about.html
+++ b/about.html
@@ -77,6 +77,9 @@
         <div class="about-header">
           <h2>Who We Are</h2>
           <div class="seperator-line"></div>
+          <p>
+            We are the OlderBrother.
+          </p>
         </div>
         <div id="about-detail">
           <div id="about-img-item">
